# BSUIR_PPOIS

./: .gitignore  CantorSet.h  LW1.sln  LW1.vcxproj
Sem3/LW1/: CantorSet.cpp  LW1.sln
Sem3/LW1/CantorSetTest/: CantorSetTest.cpp
Sem3/LW2/: Application.cpp  Application.h  Article.cpp  Article.h  AssemblyBlueprint.cpp  AssemblyBlueprint.h  Blueprint.cpp  Blueprint.h  Date.cpp  Date.h  Document.cpp  Document.h  Image.cpp  Image.h  LW2.cpp  LW2.sln  LW2.vcxproj  ModelRenderer.h  Person.cpp  Person.h  Report.cpp  Report.h  Request.cpp  Request.h  ThreeDimensionalBlueprint.cpp  ThreeDimensionalBlueprint.h  VacationApplication.cpp  VacationApplication.h  VacationRequest.cpp  VacationRequest.h
Sem3/LW2/DocumentTest/: DocumentTest.cpp
Sem3/LW3/: Airport.cs  Flight.cs  IUpdatable.cs  LW3.sln  Passenger.cs  Plane.cs  Program.cs  Simulation.cs  Ticket.cs
Sem3/LW3/LW3/: LW3.csproj  Program.cs
Sem3/LW3/LW3_UnitTest/: LW3_UnitTest.cs  LW3_UnitTest.csproj  UnitTest.cs
Sem3/LW4/: LW4.sln
Sem3/LW4/LW4_UnitTest/: GraphTest.cs  LW4_UnitTest.csproj
Sem3/LW_add5/: LW_add5.sln
Sem3/RR3/iSearchModule/: CMakeLists.txt  iSearchModule.cpp  iSearchModule.hpp
Sem3/RR3/iSearchModule/agents/: iSearchAgent.cpp  iSearchAgent.hpp
Sem3/RR3/iSearchModule/keynodes/: keynodes.cpp  keynodes.hpp
Sem4/LW1/: bank.py  classes_diagram.puml  credit_card.py  financial_state_machine.py  main.py  state_diagram.puml  transaction.py
Sem4/LW2/: README.md  main.py
Sem4/LW3/: assteroids.py  main.py  records.json
Sem4/LW4/: README.md  main.py
UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj
(+91 files in other folders)
